fix: baseURL to custom domain

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jellyfishjellyman.github.io/"
+baseURL = "https://gwbblog.top/"
 languageCode = "zh-cn"
 title = "Jellyfish的博客"
 theme = "ananke"
